Projet total/Assembleur/tests/bad/testfile-bad-comment.ms
    .section text
add %rax ; comments span the whole line ; %rbx %rcx
